<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Inventory App</string>
    <string name="add_product">Add Product</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="order">Order</string>
    <string name="delete">Delete</string>
    <string name="no_content_available">No Content Available</string>
    <string name="product">Product</string>
    <string name="qty">Qty</string>
    <string name="dollar_sign">$</string>
    <string name="image_of_product_to_be_added">Image of Product to be added</string>
    <string name="add_image">Add Image</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="supplier">Supplier</string>
    <string name="_1">1</string>
    <string name="sell">Sell</string>

    <string name="detail_product_name_is">Product name: <xliff:g id="name" example="Nexus 7">%s</xliff:g></string>
    <string name="detail_quantity_is">Quantity: <xliff:g id="quantity" example="9">%d</xliff:g></string>
    <string name="detail_price_is">Price: <xliff:g id="price" example="123">%d</xliff:g></string>
    <string name="received">Received</string>
</resources>
