<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/ivProductImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/image_of_product_to_be_added" />

            <Button
                android:id="@+id/btnAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/add_image"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/txtProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quantity"/>
            <Button
                android:id="@+id/btnMinusQuantity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/minus"/>
            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_1"/>
            <Button
                android:id="@+id/btnPlusQuantity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/plus"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"/>

        <EditText
            android:id="@+id/edtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/supplier"/>

        <EditText
            android:id="@+id/edtSupplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <Button
            android:id="@+id/btnAddProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_product"/>
    </LinearLayout>

</ScrollView>