<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--
        Detail layout
        *The detail layout contains buttons to modify the current quantity either by tracking a sale or by
        receiving a shipment.
        *The detail layout contains a button to order from the supplier.
        *The detail view contains a button to delete the product record entirely.
    -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:src="@mipmap/ic_launcher" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/plus"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/minus"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/order"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/delete"/>

</LinearLayout>